@startuml TechNova
title Diagramme de classes - TechNova Marketplace

class User {
  +id: int
  +email: string
  +password: string
  +roles: json
  +firstName: string
  +lastName: string
  +createdAt: datetime
}

class Vendor {
  +id: int
  +companyName: string
  +siret: string
  +phone: string
}

class Shop {
  +id: int
  +name: string
  +slug: string
  +description: text
  +logo: string
  +banner: string
  +contactEmail: string
  +policies: text
  +status: string  <<active | suspended>>
  +createdAt: datetime
}

class Category {
  +id: int
  +name: string 
  +slug: string 
}

class Brand { 
  +id: int 
  +name: string 
  +slug: string 
}

class Tag {
  +id: int
  +name: string
  +slug: string
}

class Product {
  +id: int
  +name: string
  +slug: string
  +description: text
  +shortDescription: text
  +price: decimal
  +stock: int
  +barcode: string
  +type: string
  +isFeatured: bool
  +createdAt: datetime
  +updatedAt: datetime
}

class ProductImage {
  +id : int
  +url : string
  +altText : string
  +title : string
  +caption : string
  +position : int
  +isMain : bool
  +fileSize : int
  +mimeType : string
  +createdAt : datetime

  +getSeoAttributes() : dict
  +isOptimized() : bool
}

class ProductReview {
   +id: int
   +rating: int
   +comment: text
   +createdAt: datetime
}

class Wishlist {
   +id: int
}

class Cart {
   +id: int
   +status: string
   +createdAt: datetime
}

class CartItem {
   +id: int
   +quantity: int
   +unitPrice: decimal
}

class Order {
   +id: int
   +orderNumber: string
   +status: string <<pending | paid | shipped | cancelled | suspended>>
   +total: decimal
   +createdAt: datetime
}
class OrderItem {
   +id: int
   +label: string
   +quantity: int
   +unitPrice: decimal
}
class Payment {
   +id: int
   +method: string
   +status: string
   +transactionId: string
}
class Media {
   +id: int
   +filePath: string
   +alt: string
   +title: string
   +keywords: string
}
class Post {
   +id: int
   +title: string
   +slug: string
   +content: text
   +createdAt: datetime
}
class Message {
   +id: int
   +senderId: int
   +receiverId: int
   +content: text
   +createdAt: datetime
   +readAt: datetime
}

' === Relations principales ===
User "1" -- "0..1" Vendor
Vendor "1" -- "1..*" Shop
Shop "1" -- "1..*" Product
Brand "1" -- "0..*" Product
Tag "0..*" -- "0..*" Product
Product "1" -- "0..*" ProductImage
Product "1" -- "0..*" ProductReview
Product "0..*" -- "0..*" Wishlist
User "1" -- "1" Cart
Cart "1" -- "1..*" CartItem
User "1" -- "0..*" Order
Order "1" -- "1..*" OrderItem
Order "1" -- "1" Shop
Order "1" -- "1" Payment
Media "0..*" -- "0..*" Product
Post "1" -- "0..*" Media
User "1" -- "0..*" Message : "envoie"
User "1" -- "0..*" Message : "reçoit"

note bottom of Shop
  L’administrateur peut suspendre une boutique (status = 'suspended')
end note

note bottom of Product
  L’administrateur peut suspendre un produit (status = 'suspended')
end note

note bottom of Order
  L’administrateur peut suspendre une commande en cas de litige
end note
@enduml
